Fix edit icon overlap on titles

--- a/enrolment/static/sass/main.scss
+++ b/enrolment/static/sass/main.scss
@@ -971,6 +971,9 @@ a.no-focus-highlight {
 }
 
 .ed-has-edit-button {
+  h2 {
+    margin-right: 50px;
+  }
   position: relative;
 }
 
